Apply modified version of https://bugs.kde.org/attachment.cgi?id=86235

umbrello/codeimport/pythonimport.h
- Add member m_isStatic of type bool defaulting to false.

umbrello/codeimport/pythonimport.cpp function parseStmt()
- Decode "@staticmethod" to set m_isStatic true.
- In handling of keyword "def",
  - If first parameter is not named "self" then set m_isStatic true and add
    the parameter via Import_Utils::addMethodParameter(); else do not add
    the parameter.
  - At call to Import_Utils::insertMethod(), provide m_isStatic as argument
    `isStatic'.
  - Reset m_isStatic false after call to Import_Utils::insertMethod().

BUG:322467